--- a/E_Commerce/Site1.Master
+++ b/E_Commerce/Site1.Master
@@ -7,19 +7,20 @@
     <title></title>
     <!-- Bootstrap -->
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
-
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="Scripts/bootstrap.bundle.js"></script>
     <!-- MDB icon -->
     <link href="MDB5/img/mdb-favicon.ico" rel="stylesheet" />
     <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
     <!-- MDB -->
     <link href="MDB5/css/mdb.rtl.min.css" rel="stylesheet" />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -31,46 +32,32 @@
             <div class="container-fluid">
                 <!-- Navbar brand -->
                 <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                    <img
-                        src="imgs/pmul.png"
-                        height="50"
-                        alt="Logo"
-                        loading="lazy" />
+                    <img src="../imgs/Elogo.png" height="50" alt="Logo" loading="lazy" />&nbsp; E-Tech
                 </a>
-                
-                <!-- Toggle button -->
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-mdb-toggle="collapse"
-                    data-mdb-target="#navbarCenteredExample"
-                    aria-controls="navbarCenteredExample"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                 
 
-                <!-- Collapsible wrapper -->
-                <div
-                    class="collapse navbar-collapse justify-content-center"
-                    id="navbarCenteredExample">
+                <!-- Add the toggle button for small screens -->
+                <button class="navbar-toggler mt-2 mt-lg-0" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-list"></i>
+
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
                     <!-- Left links -->
-                    <ul class="navbar-nav mb-2 mb-lg-0">
-                        <form class="d-flex input-group w-auto">
-                            <input
-                                type="search"
-                                class="form-control rounded"
-                                placeholder="Search"
-                                aria-label="Search"
-                                aria-describedby="search-addon" />
-                            <span class="input-group-text border-0" id="search-addon">
-                                <i class="fas fa-search"></i>
-                            </span>
-                        </form>
-                        <!-- Navbar dropdown -->
+                    <ul class="navbar-nav flex-row">
+                        <li class="nav-item me-2 me-lg-0"></li>
+                        <li class="nav-item me-2 me-lg-0">
+                            <a class="nav-link" href="../Home/Home.aspx">Home</a>
+                        </li>
+                        <li class="nav-item me-2 me-lg-0">
+                            <a class="nav-link" href="../productDetails/Products.aspx">Products</a>
+                        </li>
+                        <li class="nav-item me-2 me-lg-0">
+                            <a class="nav-link" href="../Pages/Contact.aspx">Contact</a>
+                        </li>
                         <li class="nav-item dropdown">
-                            
+                            <!-- Dropdown toggle button -->
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">More Info
+                            </a>
+
                             <!-- Dropdown menu -->
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li>
@@ -80,155 +67,44 @@
                                     <a class="dropdown-item" href="#">FAQ</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Warranty</a>
+                                    <a class="dropdown-item" href="../Pages/Warranty.aspx">Warranty</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Contact</a>
+                                    <a class="dropdown-item" href="../Pages/Contact.aspx">Contact</a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                   
 
-                    <!-- Flags dropdown -->
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown justify-content-center">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="navbarDropdown"
-                            role="button"
-                            data-mdb-toggle="dropdown"
-                            aria-expanded="false">
-                            <i class="flag-united-kingdom flag m-0"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-united-kingdom flag"></i>English
-              <i class="fa fa-check text-success ms-2"></i></a>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider" />
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-poland flag"></i>Polski</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-china flag"></i>中文</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-japan flag"></i>日本語</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-germany flag"></i>Deutsch</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-france flag"></i>Français</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-spain flag"></i>Español</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-russia flag"></i>Русский</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"><i class="flag-portugal flag"></i>Português</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                    <!-- Left links -->
-                </div>
-                <ul class="navbar-nav d-flex flex-row">
-                    <!-- Icons -->
-                    <li class="nav-item me-3 me-lg-0">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-shopping-cart"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-0">
-                        <a class="nav-link" href="#">
-                            <i class="far fa-heart"></i>
-
-                        </a>
-                    </li>
-
-
-                    <!-- Shopcart, favorite, create acc dropdownlist -->
-                    <li class="nav-item me-3 me-lg-0 dropdown">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="navbarDropdown"
-                            role="button"
-                            data-mdb-toggle="dropdown"
-                            aria-expanded="false">
-                            <i class="fas fa-user"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item" href="#">Login</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Create Account</a>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider" />
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Support</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                
-            </div>
-        </nav>
-        <!--===============================================================================-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <!-- Container wrapper -->
-    <div class="container justify-content-center justify-content-md-between">
-      <!-- Left links -->
-      <ul class="navbar-nav flex-row">
-        <li class="nav-item me-2 me-lg-0">
-          <a class="nav-link" role="button" data-mdb-toggle="sidenav" data-mdb-target="#sidenav-1"
-            class="btn shadow-0 p-0 me-3" aria-controls="#sidenav-1" aria-haspopup="true">
-            <i class="fas fa-bars me-1"></i>
-            <span>Categories</span>
-          </a>
-        </li>
-        <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Bestsellers</a>
-        </li>
-        <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Computers</a>
-        </li>
-        <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Laptops</a>
-        </li>
-          <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Tablets</a>
-        </li>
-          <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Phones</a>
-        </li>
-        <li class="nav-item me-2 me-lg-0 d-none d-md-inline-block">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-      <!-- Left links -->
-
+                   <!-- Shopcart, create acc dropdownlist -->
+            <ul class="navbar-nav ml-auto d-flex flex-row">
+                <!-- Icons -->
+                <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user"></i>
+                    </a>
+                    <!-- Dropdown menu -->
+                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-right" aria-labelledby="navbarDropdown2">
+                        <li>
+                            <a class="dropdown-item" href="#">Login</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Register</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-    <!-- Container wrapper -->
-  </nav>
-  <!-- Navbar -->
-
-  <!-- Sidenav -->
-        <!--Main Navigation-->
+</nav>
 
         <!-- Main Content Placeholder -->
         <div>
@@ -236,7 +112,7 @@
             </asp:ContentPlaceHolder>
         </div>
         <!-- Main Content Placeholder -->
-        
+
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-white text-muted">
             <!-- Section: Social media -->
@@ -249,10 +125,10 @@
 
                 <!-- Right -->
                 <div>
-                    <a href="" class="me-4 link-secondary">
+                    <a href="https://twitter.com/" class="me-4 link-secondary">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="" class="me-4 link-secondary">
+                    <a href="../Home/Home.aspx" class="me-4 link-secondary">
                         <i class="fab fa-google"></i>
                     </a>
                     <a href="" class="me-4 link-secondary">
@@ -272,7 +148,7 @@
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                <i class="text-secondary"></i>AKYF
+                                <i class="text-secondary"></i>E-Tech
                             </h6>
                             <p>
                                 Our computer company specializes in selling a wide range of electronic devices, including computers, tablets, laptops, and phones.
@@ -286,16 +162,16 @@
                             <h6 class="text-uppercase fw-bold mb-4">Products
                             </h6>
                             <p>
-                                <a href="#!" class="text-reset">Computers</a>
+                                <a href="../productDetails/Products.aspx" class="text-reset">Computers</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Laptops</a>
+                                <a href="../productDetails/Products.aspx" class="text-reset">Laptops</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Tablets</a>
+                                <a href="../productDetails/Products.aspx" class="text-reset">Tablets</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Phones</a>
+                                <a href="../productDetails/Products.aspx" class="text-reset">Phones</a>
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -312,7 +188,7 @@
                                 <a href="#!" class="text-reset">FAQs</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Warranty</a>
+                                <a href="../Pages/Warranty.aspx" class="text-reset">Warranty</a>
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -324,7 +200,7 @@
                             <p><i class="fas fa-home me-3 text-secondary"></i>Jubail Industrial City, JIC 4371, SA</p>
                             <p>
                                 <i class="fas fa-envelope me-3 text-secondary"></i>
-                                info@akyf.com
+                                info@ETech.com
                             </p>
                             <p><i class="fas fa-phone me-3 text-secondary"></i>00966502148298</p>
                         </div>
@@ -334,11 +210,10 @@
                 </div>
             </section>
             <!-- Section: Links  -->
-
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
                 © 2023 Copyright:
-    <a class="text-reset fw-bold" href="#">AKYF</a>
+                <a class="text-reset fw-bold" href="#">E-Tech</a>
             </div>
             <!-- Copyright -->
         </footer>
